# stm32-narfu

./: CMakeLists.txt  flash.sh
cmake/: jlink.cmake  post-build.cmake  stlink.cmake  stm32-base.cmake  stm32f4.cmake
drivers/: stm32.ld.in
drivers/BSP/: bsp.cmake
drivers/CMSIS/: cmsis.cmake
drivers/HAL/: hal.cmake
user/: main.cpp
